--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-json-editor-ajrm": "^2.5.14",
+    "react-json-tree": "^0.19.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tree-view": "^0.1.0",
     "recharts": "^2.12.3",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
