페이지 수정, 사이드바 오류 수정중

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@coffee-tree/config-schema-generator": "^1.0.1",
+    "@coffee-tree/config-schema-generator": "^1.0.2",
     "@elyra/pipeline-editor": "^1.12.1",
     "@emotion/is-prop-valid": "^1.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/x-tree-view": "^7.4.0",
+    "@radix-ui/themes": "^3.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
