--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/x-tree-view": "^7.4.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/themes": "^3.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
